; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_kern_cdata.c_kcdata_bzero.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_kern_cdata.c_kcdata_bzero.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@KERN_SUCCESS = common dso_local global i32 0, align 4
@KCFLAG_USE_COPYOUT = common dso_local global i32 0, align 4
@KERN_NO_ACCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kcdata_bzero(%struct.TYPE_3__* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca [16 x i32], align 16
  %10 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %11 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %11, i32* %8, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @KCFLAG_USE_COPYOUT, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %40

18:                                               ; preds = %3
  %19 = bitcast [16 x i32]* %9 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %19, i8 0, i64 64, i1 false)
  br label %20

20:                                               ; preds = %34, %18
  %21 = load i64, i64* %7, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %38

23:                                               ; preds = %20
  %24 = load i64, i64* %7, align 8
  %25 = call i64 @MIN(i64 %24, i32 16)
  store i64 %25, i64* %10, align 8
  %26 = bitcast [16 x i32]* %9 to i32**
  %27 = load i64, i64* %6, align 8
  %28 = load i64, i64* %10, align 8
  %29 = call i32 @copyout(i32** %26, i64 %27, i64 %28)
  store i32 %29, i32* %8, align 4
  %30 = load i32, i32* %8, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %23
  %33 = load i32, i32* @KERN_NO_ACCESS, align 4
  store i32 %33, i32* %4, align 4
  br label %46

34:                                               ; preds = %23
  %35 = load i64, i64* %10, align 8
  %36 = load i64, i64* %7, align 8
  %37 = sub nsw i64 %36, %35
  store i64 %37, i64* %7, align 8
  br label %20

38:                                               ; preds = %20
  %39 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %39, i32* %4, align 4
  br label %46

40:                                               ; preds = %3
  %41 = load i64, i64* %6, align 8
  %42 = inttoptr i64 %41 to i8*
  %43 = load i64, i64* %7, align 8
  %44 = call i32 @bzero(i8* %42, i64 %43)
  %45 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %45, i32* %4, align 4
  br label %46

46:                                               ; preds = %40, %38, %32
  %47 = load i32, i32* %4, align 4
  ret i32 %47
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @MIN(i64, i32) #2

declare dso_local i32 @copyout(i32**, i64, i64) #2

declare dso_local i32 @bzero(i8*, i64) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
